--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<li class="nav__item"><a href="resume.html">Resume</a></li>
 								<li class="nav__item"><a href="portfolio.html">Projects</a></li>
 								<!-- <li class="nav__item"><a href="gallery.html">Gallery</a></li> -->
-                                <li class="nav__item"><a href="contact.html">Contact</a></li>
+                                <!-- <li class="nav__item"><a href="contact.html">Contact</a></li> -->
                             </ul>
 						</div>
 						
