--- a/portfolio.html
+++ b/portfolio.html
@@ -173,7 +173,7 @@
                     <a class="active" href="portfolio.html">Projects</a>
                   </li>
                   <!-- <li class="nav__item"><a href="gallery.html">Gallery</a></li> -->
-                  <li class="nav__item"><a href="contact.html">Contact</a></li>
+                  <!-- <li class="nav__item"><a href="contact.html">Contact</a></li> -->
                 </ul>
               </div>
 
