--- a/resume.html
+++ b/resume.html
@@ -169,7 +169,7 @@
 									<li class="nav__item"><a class="active" href="resume.html">Resume</a></li>
 									<li class="nav__item"><a href="portfolio.html">Projects</a></li>
 									<!-- <li class="nav__item"><a href="gallery.html">Gallery</a></li> -->
-																	<li class="nav__item"><a href="contact.html">Contact</a></li>
+																	<!-- <li class="nav__item"><a href="contact.html">Contact</a></li> -->
 															</ul>
 							</div>
 
