--- a/portfolio.html
+++ b/portfolio.html
@@ -211,6 +211,33 @@
               </div>
             </div>
 
+              <!-- News -->
+              <div class="news-grid pb-0">
+                <!-- Post -->
+                <article class="news-item box">
+                  <div class="news-item__image-wrap overlay overlay--45">
+                    <div class="news-item__date">Group Project</div>
+                    <a
+                      class="news-item__link"
+                      href="https://www.peep.chat/#/"
+                    ></a>
+                    <img
+                      class="cover lazyload"
+                      src="assets/images/peep.jpeg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="news-item__caption">
+                    <h2 class="title title--h4">Peep</h2>
+                    <p>
+                      A full stack chat application built in 2 weeks focused on group and individual messaging. Built with Styled Components, React,
+                      Node, PostgreSQL, Firebase, GIPHY API, and Socket.io.
+                    </p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
             <!-- Footer -->
             <footer class="footer"></footer>
           </div>
