--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							    </li>
 					        </ul>
 							
-							<a class="btn btn--blue-gradient" href="#"><i class="font-icon icon-download"></i> Download CV</a>
+							<a class="btn btn--blue-gradient" href="https://drive.google.com/file/d/1cwl-6Gk91Hl10e3eqHtBc6cH_vniUM75/view?usp=sharing"><i class="font-icon icon-download"></i> Download CV</a>
 						</div>
 					</div>	
 		        </aside>
