--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,9 @@
                   </li>
                 </ul>
 
-                <a class="btn btn--blue-gradient" href="https://drive.google.com/file/d/1cwl-6Gk91Hl10e3eqHtBc6cH_vniUM75/view?usp=sharing"
+                <a
+                  class="btn btn--blue-gradient"
+                  href="https://drive.google.com/file/d/1cwl-6Gk91Hl10e3eqHtBc6cH_vniUM75/view?usp=sharing"
                   ><i class="font-icon icon-download"></i> Download CV</a
                 >
               </div>
@@ -208,11 +210,6 @@
                     </p>
                   </div>
                 </article>
-              </div>
-            </div>
-
-              <!-- News -->
-              <div class="news-grid pb-0">
                 <!-- Post -->
                 <article class="news-item box">
                   <div class="news-item__image-wrap overlay overlay--45">
@@ -230,8 +227,10 @@
                   <div class="news-item__caption">
                     <h2 class="title title--h4">Peep</h2>
                     <p>
-                      A full stack chat application built in 2 weeks focused on group and individual messaging. Built with Styled Components, React,
-                      Node, PostgreSQL, Firebase, GIPHY API, and Socket.io.
+                      A full stack chat application built in 2 weeks focused on
+                      group and individual messaging. Built with Styled
+                      Components, React, Node, PostgreSQL, Firebase, GIPHY API,
+                      and Socket.io.
                     </p>
                   </div>
                 </article>
